# lossless-abort-reboot

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Exit.bat  LICENSE_MIT  README.md  envExample.bat  lossless-abort-reboot.code-workspace  main.cpp  start_ide.bat
Src/Core/: no_reboot.cpp  no_reboot.h
Src/Define/: define.h
Src/Interface/MainWindow/: mainwindow.cpp  mainwindow.h
